--- a/WPF/Project3_WPF/Project3_WPF/MainWindow.xaml
+++ b/WPF/Project3_WPF/Project3_WPF/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Project3_WPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="650" Width="1100">
+        Title="MainWindow" Height="650" Width="1100" x:Name="MainWin">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="10"/>
@@ -16,20 +16,22 @@
 
         <Grid.RowDefinitions>
             <RowDefinition Height="10"/>
+            <RowDefinition Height="50"/>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="10"/>
         </Grid.RowDefinitions>
 
-        <StackPanel Grid.Row="1" Grid.Column="1" Margin="0,10,0,0">
-            <Button x:Name="Btn_partijen" Click="Btn_partijen_Click">partijen</Button>
-            <Button Margin="0,10,0,0">Standpunten</Button>
-            <Button Margin="0,10,0,0">Stem</Button>
-            <Button Margin="0,10,0,0">Thema's</Button>
-            <Button Margin="0,10,0,0">Verkiezingen</Button>
-            <Button Margin="0,10,0,0">Verkiezingsorten</Button>
-            <Button Margin="0,10,0,0">Verkiezingpartijen</Button>
+        <Label Grid.Row="1" Grid.Column="2" Content="" FontSize="25" x:Name="Title"/>
+
+        <StackPanel Grid.Row="2" Grid.Column="1" Margin="0,10,0,0">
+            <Button FontSize="20" Width="170" Height="40" x:Name="Btn_partijen" Click="Btn_partijen_Click">partijen</Button>
+            <Button FontSize="20" Width="170" Height="40" x:Name="Btn_standpunt" Margin="0,10,0,0" Click="Btn_standpunt_Click">Standpunten</Button>
+            <Button FontSize="20" Width="170" Height="40" Margin="0,10,0,0">Thema's</Button>
+            <Button FontSize="20" Width="170" Height="40" Margin="0,10,0,0">Verkiezingen</Button>
+            <Button FontSize="20" Width="170" Height="40" Margin="0,10,0,0">Verkiezingsorten</Button>
+            <Button FontSize="20" Width="170" Height="40" Margin="0,10,0,0">Verkiezingpartijen</Button>
         </StackPanel>
 
-        <Frame Grid.Row="1" Grid.Column="2" x:Name="mainFrame" NavigationUIVisibility="Hidden"  />
+        <Frame Grid.Row="2" Grid.Column="2" x:Name="mainFrame" NavigationUIVisibility="Hidden"  />
     </Grid>
 </Window>
