--- a/WPF/Project3_WPF/Project3_WPF/standputten_Page.xaml
+++ b/WPF/Project3_WPF/Project3_WPF/standputten_Page.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Project3_WPF.Partijen_Page"
+﻿<Page x:Class="Project3_WPF.standputten_Page"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:Project3_WPF"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Partijen_Page" Background="White">
+      Title="standputten_Page" Background="White">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="10"/>
@@ -25,58 +25,46 @@
         <!--In deze grid komt het toevoegen van database te komen staan-->
         <Grid Grid.Row="1" Grid.Column="1" >
             <Grid.RowDefinitions>
-                <RowDefinition Height="10*"/>
-                <RowDefinition Height="10*"/>
-                <RowDefinition Height="10*"/>
-                <RowDefinition Height="10*"/>
-                <RowDefinition Height="10*"/>
+                <RowDefinition Height="12*"/>
+                <RowDefinition Height="15*"/>
+                <RowDefinition Height="2*"/>
+                <RowDefinition Height="8*"/>
                 <RowDefinition Height="10*"/>
                 <RowDefinition Height="10*"/>
                 <RowDefinition Height="15*"/>
             </Grid.RowDefinitions>
 
-            <StackPanel>
-                <TextBlock Text="Partij Name:" FontSize="15"/>
-                <TextBox Height="30"/>
+            
+            <StackPanel Grid.Row="0">
+                <Label Content="Partij" FontSize="15" />
+                <ComboBox x:Name="cmbPartij" DisplayMemberPath="PartijName" SelectedValuePath="id" Height="35"/>
             </StackPanel>
             <StackPanel Grid.Row="1">
-                <TextBlock Text="Adress:" FontSize="15"/>
-                <TextBox Height="30"/>
-            </StackPanel>
-            <StackPanel Grid.Row="2">
-                <TextBlock Text="Postcode:" FontSize="15"/>
-                <TextBox Height="30"/>
-            </StackPanel>
-            <StackPanel Grid.Row="3">
-                <TextBlock Text="Gemeente:" FontSize="15"/>
-                <TextBox Height="30"/>
+                <Label Content="Thema" FontSize="15" />
+                <ComboBox x:Name="cmbThema" DisplayMemberPath="Thema" SelectedValuePath="id" Height="35"/>
             </StackPanel>
             <StackPanel Grid.Row="4">
-                <TextBlock Text="Email Adres:" FontSize="15"/>
+                <TextBlock Text="Standpunt:" FontSize="15"/>
                 <TextBox Height="30"/>
             </StackPanel>
-            <StackPanel Grid.Row="5">
-                <TextBlock Text="Telefoonnummer:" FontSize="15"/>
-                <TextBox Height="30"/>
-            </StackPanel>
+            
 
-            <Button Grid.Row="7" Height="40" Background="Green" FontSize="20" Foreground="White" Content="Toevoegen" Click="Button_Click"/>
+            <Button x:Name="Toevoegen" Grid.Row="7" Height="40" Background="Green" FontSize="20" Foreground="White" Content="Toevoegen" Click="Toevoegen_Click"/>
 
         </Grid>
 
         <DataGrid Grid.Row="1" Grid.Column="3" x:Name="dgStudents" SelectionMode="Single" CanUserAddRows="False" AutoGenerateColumns="False" Background="White">
             <DataGrid.Columns>
-                <DataGridTextColumn Binding="{Binding PartijId}"  Header="id"/>
-                <DataGridTextColumn Binding="{Binding PartijName}"  Header="Partij naam"/>
-                <DataGridTextColumn Binding="{Binding Adres}"  Header="Adress"/>
-                <DataGridTextColumn Binding="{Binding Postcode}"  Header="Postcode"/>
-                <DataGridTextColumn Binding="{Binding Gemeente}"  Header="Gemeente"/>
-                <DataGridTextColumn Binding="{Binding EmailAdres}"  Header="EmailAdres"/>
-                <DataGridTextColumn Binding="{Binding Telefoonnummer}"  Header="Telefoonnummer"/>
+                <DataGridTextColumn Binding="{Binding StandpuntId}"  Header="Standpunt id"/>
+                <DataGridTextColumn Binding="{Binding PartijId}"  Header="Partij id"/>
+                <DataGridTextColumn Binding="{Binding PartijName}"  Header="PartijName"/>
+                <DataGridTextColumn Binding="{Binding ThemaId}"  Header="ThemaId"/>
+                <DataGridTextColumn Binding="{Binding Thema}"  Header="Thema"/>
+                <DataGridTextColumn Binding="{Binding Standpunt}"  Header="Standpunt"/>
                 <DataGridTemplateColumn>
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Button Content="Wijzig" x:Name="Wijzig"/>
+                            <Button Content="Wijzig" x:Name="Weizig"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
@@ -89,5 +77,6 @@
                 </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
+        
     </Grid>
 </Page>
