--- a/WPF/Project3_WPF/Project3_WPF/standpunten_Page.xaml
+++ b/WPF/Project3_WPF/Project3_WPF/standpunten_Page.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Project3_WPF.standputten_Page"
+﻿<Page x:Class="Project3_WPF.standpunten_Page"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:Project3_WPF"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="standputten_Page" Background="White">
+      Title="standpunten_Page" Background="White">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="10"/>
@@ -64,7 +64,7 @@
                 <DataGridTemplateColumn>
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Button Content="Wijzig" x:Name="Weizig"/>
+                            <Button Content="Wijzig" x:Name="Wijzig"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
