Toevoeging Thema.page met Select en Insert

--- a/WPF/Project3_WPF/Project3_WPF/Themas_Page.xaml
+++ b/WPF/Project3_WPF/Project3_WPF/Themas_Page.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Project3_WPF.standpunten_Page"
+﻿<Page x:Class="Project3_WPF.Themas_Page"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,8 @@
       xmlns:local="clr-namespace:Project3_WPF"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="standpunten_Page" Background="White">
+      Title="Themas" Background="White">
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="10"/>
@@ -15,52 +16,28 @@
             <ColumnDefinition Width="2*"/>
             <ColumnDefinition Width="10"/>
         </Grid.ColumnDefinitions>
-
         <Grid.RowDefinitions>
             <RowDefinition Height="10"/>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="10"/>
         </Grid.RowDefinitions>
-
-        <!--In deze grid komt het toevoegen van database te komen staan-->
-        <Grid Grid.Row="1" Grid.Column="1" >
+        <Grid Grid.Row="1" Grid.Column="1">
             <Grid.RowDefinitions>
-                <RowDefinition Height="12*"/>
-                <RowDefinition Height="15*"/>
-                <RowDefinition Height="2*"/>
-                <RowDefinition Height="8*"/>
-                <RowDefinition Height="10*"/>
-                <RowDefinition Height="10*"/>
-                <RowDefinition Height="15*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="20*"/>
+                <RowDefinition Height="4*"/>
             </Grid.RowDefinitions>
-
-            
-            <StackPanel Grid.Row="0">
-                <Label Content="Partij" FontSize="15" />
-                <ComboBox x:Name="cmbPartij" DisplayMemberPath="PartijName" SelectedValuePath="id" Height="35"/>
-            </StackPanel>
             <StackPanel Grid.Row="1">
-                <Label Content="Thema" FontSize="15" />
-                <ComboBox x:Name="cmbThema" DisplayMemberPath="Thema" SelectedValuePath="id" Height="35"/>
+                <TextBlock Text="Thema:" FontSize="15"/>
+                <TextBox x:Name="tbThema" Height="30"/>
             </StackPanel>
-            <StackPanel Grid.Row="4">
-                <TextBlock Text="Standpunt:" FontSize="15"/>
-                <TextBox Height="30"/>
-            </StackPanel>
-            
-
-            <Button x:Name="Toevoegen" Grid.Row="7" Height="40" Background="Green" FontSize="20" Foreground="White" Content="Toevoegen" Click="Toevoegen_Click"/>
-
+            <Button x:Name="Toevoegen" Grid.Row="2" Height="40" Background="Green" FontSize="20" Foreground="White" Content="Toevoegen" Click="Toevoegen_Click"/>
         </Grid>
 
-        <DataGrid Grid.Row="1" Grid.Column="3" x:Name="dgStandpunten" SelectionMode="Single" CanUserAddRows="False" AutoGenerateColumns="False" Background="White">
+        <DataGrid Grid.Row="1" Grid.Column="3" x:Name="dgThemas" SelectionMode="Single" CanUserAddRows="False" AutoGenerateColumns="False" Background="White">
             <DataGrid.Columns>
-                <DataGridTextColumn Binding="{Binding StandpuntId}"  Header="Standpunt id"/>
-                <DataGridTextColumn Binding="{Binding PartijId}"  Header="Partij id"/>
-                <DataGridTextColumn Binding="{Binding PartijName}"  Header="PartijName"/>
                 <DataGridTextColumn Binding="{Binding ThemaId}"  Header="ThemaId"/>
                 <DataGridTextColumn Binding="{Binding Thema}"  Header="Thema"/>
-                <DataGridTextColumn Binding="{Binding Standpunt}"  Header="Standpunt"/>
                 <DataGridTemplateColumn>
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
@@ -77,6 +54,5 @@
                 </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
-        
     </Grid>
 </Page>
