--- a/WPF/Project3_WPF/Project3_WPF/MainWindow.xaml
+++ b/WPF/Project3_WPF/Project3_WPF/MainWindow.xaml
@@ -26,7 +26,7 @@
         <StackPanel Grid.Row="2" Grid.Column="1" Margin="0,10,0,0">
             <Button FontSize="20" Width="170" Height="40" x:Name="Btn_partijen" Click="Btn_partijen_Click">partijen</Button>
             <Button FontSize="20" Width="170" Height="40" x:Name="Btn_standpunt" Margin="0,10,0,0" Click="Btn_standpunt_Click">Standpunten</Button>
-            <Button FontSize="20" Width="170" Height="40" Margin="0,10,0,0">Thema's</Button>
+            <Button FontSize="20" Width="170" Height="40" x:Name="Btn_themas" Click="Btn_themas_Click" Margin="0,10,0,0">Thema's</Button>
             <Button FontSize="20" Width="170" Height="40" Margin="0,10,0,0">Verkiezingen</Button>
             <Button FontSize="20" Width="170" Height="40" Margin="0,10,0,0">Verkiezingsorten</Button>
             <Button FontSize="20" Width="170" Height="40" Margin="0,10,0,0">Verkiezingpartijen</Button>
