--- a/WPF/Project3_WPF/Project3_WPF/VerkiezingSoort_Page.xaml
+++ b/WPF/Project3_WPF/Project3_WPF/VerkiezingSoort_Page.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Project3_WPF.Themas_Page"
+﻿<Page x:Class="Project3_WPF.VerkiezingSoort_Page"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:Project3_WPF"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Themas" Background="White">
+      Title="VerkiezingSoort_Page" Background="White">
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -28,20 +28,20 @@
                 <RowDefinition Height="4*"/>
             </Grid.RowDefinitions>
             <StackPanel Grid.Row="1">
-                <TextBlock Text="Thema:" FontSize="15"/>
-                <TextBox x:Name="tbThema" Height="30" GotFocus="tbThema_GotFocus"/>
+                <TextBlock Text="Verkiezingsoort:" FontSize="15"/>
+                <TextBox x:Name="tbVerkiezingSoort" Height="30" GotFocus="tbVerkiezingSoort_GotFocus" />
             </StackPanel>
             <Button x:Name="Toevoegen" Grid.Row="2" Height="40" Background="Green" FontSize="20" Foreground="White" Content="Toevoegen" Click="Toevoegen_Click"/>
         </Grid>
 
-        <DataGrid Grid.Row="1" Grid.Column="3" x:Name="dgThemas" SelectionMode="Single" CanUserAddRows="False" AutoGenerateColumns="False" Background="White">
+        <DataGrid Grid.Row="1" Grid.Column="3" x:Name="dgVerkiezingSoort" SelectionMode="Single" CanUserAddRows="False" AutoGenerateColumns="False" Background="White">
             <DataGrid.Columns>
-                <DataGridTextColumn Binding="{Binding ThemaId}"  Header="ThemaId"/>
-                <DataGridTextColumn Binding="{Binding Thema}"  Header="Thema"/>
+                <DataGridTextColumn Binding="{Binding SoortId}"  Header="SoortId"/>
+                <DataGridTextColumn Binding="{Binding Verkiezingsoort}"  Header="VerkiezingSoort"/>
                 <DataGridTemplateColumn>
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Button Content="Wijzig" x:Name="Wijzig" Click="Wijzig_Click"/>
+                            <Button Content="Wijzig" x:Name="Wijzig" Click="Wijzig_Click" />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
