--- a/WPF/Project3_WPF/Project3_WPF/standpunten_Page.xaml
+++ b/WPF/Project3_WPF/Project3_WPF/standpunten_Page.xaml
@@ -36,15 +36,15 @@
             
             <StackPanel Grid.Row="0">
                 <Label Content="Partij" FontSize="15" />
-                <ComboBox x:Name="cmbPartij" DisplayMemberPath="PartijName" SelectedValuePath="id" Height="35"/>
+                <ComboBox x:Name="cmbPartij" DisplayMemberPath="PartijName" SelectedValuePath="PartijId" Height="35"/>
             </StackPanel>
             <StackPanel Grid.Row="1">
                 <Label Content="Thema" FontSize="15" />
-                <ComboBox x:Name="cmbThema" DisplayMemberPath="Thema" SelectedValuePath="id" Height="35"/>
+                <ComboBox x:Name="cmbThema" DisplayMemberPath="Thema" SelectedValuePath="ThemaId" Height="35"/>
             </StackPanel>
             
                 <TextBlock Text="Standpunt:" Grid.Row="3" FontSize="15"/>
-                <TextBox Grid.Row="4" TextWrapping="WrapWithOverflow" />
+                <TextBox x:Name="tbStandpunt" Grid.Row="4" TextWrapping="WrapWithOverflow" />
             
             
 
@@ -63,14 +63,14 @@
                 <DataGridTemplateColumn>
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Button Content="Wijzig" x:Name="Wijzig"/>
+                            <Button Content="Wijzig" x:Name="Wijzig" Click="Wijzig_Click" />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
                 <DataGridTemplateColumn>
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Button Content="Verwijder" x:Name="Verwijder" />
+                            <Button Content="Verwijder" x:Name="Verwijder" Click="Verwijder_Click" />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
