--- a/WEB/css/style.css
+++ b/WEB/css/style.css
@@ -6,7 +6,15 @@
 .row{
   display: flex;
   justify-content: space-between;
-  height: 500px;
+  min-height: 500px;
+}
+
+.mini-row{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 
 .row-2{
@@ -92,7 +100,7 @@ h1{
 .Partijen{
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
+  gap: 20px;
 }
 
 .info_Partij{
@@ -113,4 +121,20 @@ h1{
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   display: flex;
   justify-content: center;
+}
+
+.themaTitel{
+  text-align: center;
+}
+
+.mini-container{
+  width: 325px;
+  max-width: 450px;
+  height: 200px;
+  border: 1px solid blue;
+  border-radius: 13px;
+  transition: transform 0.5s;
+}
+.mini-container:hover{
+  transform: translateY(-15px);
 }
