--- a/WEB/css/style.css
+++ b/WEB/css/style.css
@@ -92,8 +92,8 @@ h1{
 }
 
 .btnStart{
-  background-color: #4CAF50; 
-  border: none;
+  background-color: lightblue; 
+  border: solid lightsteelblue;
   color: white;
   padding: 15px 52px;
   text-align: center;
@@ -155,4 +155,36 @@ h1{
 }
 .mini-container:hover{
   transform: translateY(-15px);
+}
+
+.Scol-1{
+  flex-basis: 50%;
+  max-width: 400px;
+  height: 50%;  
+  margin-bottom: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  border: 1px solid black;
+  box-shadow: 5px 10px #888888;
+  border-radius: 13px;
+  padding: 20px;
+}
+
+.Scol-2{
+  flex-basis: 30%;
+  min-width: 250px;
+  height: 60%;
+}
+.btnStem{
+  background-color: lightblue; 
+  border: solid lightsteelblue;
+  color: white;
+  padding: 15px 52px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  border-radius: 13px;
+  width: 200px;
+  margin-bottom: 10px;
 }
